--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,6 @@ block content
 
     svg(class='chart')
 
-    
+block js
+    script(src='/components/d3/d3.min.js')
+    script(src='/js/chart.js')
