--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <svg class="chart"></svg>
+    <h1>Github Usage</h1>
+    <form role="form" action="/user">
+        <div class="form-group">
+            <label for="user">Github Username</label>
+            <input type="text" class="form-control" id="user" name="user" placeholder="Github username">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 {% endblock %}
 
-
-{% block js %}
-    <script src="/components/d3/d3.min.js"></script>
-    <script src="/js/chart.js"></script>
-{% endblock %}
