--- a/views/index.html
+++ b/views/index.html
@@ -2,12 +2,16 @@
 
 {% block content %}
     <h1>Github Usage</h1>
-    <form role="form" action="/user">
-        <div class="form-group">
-            <label for="user">Github Username</label>
-            <input type="text" class="form-control" id="user" name="user" placeholder="Github username">
+    <div class="row">
+        <div class="col-sm-6">
+            <form role="form" action="/user">
+                <div class="form-group">
+                    <label for="user">Github Username</label>
+                    <input type="text" class="form-control" id="user" name="user" placeholder="Github username">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    </div>
 {% endblock %}
 
