--- a/views/layout.html
+++ b/views/layout.html
@@ -13,6 +13,8 @@
         <script src="http://localhost:35729/livereload.js"></script>
     </head>
     <body>
+        {% include 'nav.html' %}
+        
         <div class="container">
 
             {% block content %}
