pretty print raw api response on page

--- a/views/user.html
+++ b/views/user.html
@@ -13,4 +13,8 @@
             <li>{{repo}}</li>
         {% endfor %}
     </ul>
+
+    <pre>
+        {{raw.repos|stringify}}
+    </pre>
 {% endblock %}
