generating chart via ajax call to api returning hardcoded data

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <h1>Github Usage</h1>
     <div class="row">
         <div class="col-sm-6">
-            <form role="form" action="/user">
+            <form role="form" action="#" id="input">
                 <div class="form-group">
                     <label for="user">Github Username</label>
                     <input type="text" class="form-control" id="user" name="user" placeholder="Github username">
@@ -13,5 +13,16 @@
             </form>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <svg id="chart"></svg>
+        </div>
+    </div>
 {% endblock %}
 
+
+{% block js %}
+    <script src="/components/d3/d3.min.js"></script>
+    <script src="/js/main.js"></script>
+{% endblock %}
