--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
 
     <div class="row">
         <div class="col-sm-12">
+            <h2>Number of Commits Per Repo</h2>
             <svg id="chart"></svg>
         </div>
     </div>
