--- a/views/index.html
+++ b/views/index.html
@@ -25,5 +25,6 @@
 
 {% block js %}
     <script src="/components/d3/d3.min.js"></script>
+    <script src="/js/charts/commits-by-repo.js"></script>
     <script src="/js/main.js"></script>
 {% endblock %}
