--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <h1>Github Usage</h1>
     <div class="row">
         <div class="col-sm-6">
-            <form role="form" action="#" id="input">
+            <form role="form" action="#" id="form">
                 <div class="form-group">
                     <label for="user">Github Username</label>
                     <input type="text" class="form-control" id="user" name="user" placeholder="Github username">
