--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,8 @@
     border: 1px solid rgba(0,0,0,.25)
 }
 
-.bar {
-    fill: #38587c;
+.bar-default {
+    fill: #7A99B8;
 }
 
 .bar-group .amount {
