--- a/views/index.html
+++ b/views/index.html
@@ -15,15 +15,15 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-12">
-            <h2>Number of Commits Per Repo</h2>
+        <div class="col-md-12">
+            <h2>Number of Commits</h2>
+        </div>
+        <div class="col-md-6">
+            <h3>Per Repo</h3>
             <svg id="commitsByRepoChart"></svg>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12">
-            <h2>Number of Commits Per Week</h2>
+        <div class="col-md-6">
+            <h3>Per Week</h3>
             <svg id="commitsPerWeekChart"></svg>
         </div>
     </div>
