--- a/views/index.html
+++ b/views/index.html
@@ -20,11 +20,11 @@
         </div>
         <div class="col-md-6">
             <h3>Per Repo</h3>
-            <svg id="commitsByRepoChart"></svg>
+            <svg id="commitsByRepoChart" class="canvas"></svg>
         </div>
         <div class="col-md-6">
             <h3>Per Week</h3>
-            <svg id="commitsPerWeekChart"></svg>
+            <svg id="commitsPerWeekChart" class="canvas"></svg>
         </div>
     </div>
 {% endblock %}
