move data manipulation to 'model'

--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,7 @@
 
 {% block js %}
     <script src="/components/d3/d3.min.js"></script>
+    <script src="/js/model.js"></script>
     <script src="/js/charts/commits-by-repo.js"></script>
     <script src="/js/charts/commits-per-week.js"></script>
     <script src="/js/main.js"></script>
