--- a/views/layout.html
+++ b/views/layout.html
@@ -22,7 +22,8 @@
         </div>
 
         <script src="/components/jquery/dist/jquery.min.js"></script>
-
+        <script src="/components/d3/d3.min.js"></script>
+        
         {% block js %}
         {% endblock %}
 
