--- a/views/test.html
+++ b/views/test.html
@@ -7,6 +7,7 @@
 <body>
   <div id="mocha"></div>
   <script src="/components/jquery/dist/jquery.min.js"></script>
+  <script src="/components/d3/d3.min.js"></script>
   <script src="/components/mocha/mocha.js"></script>
   <script src="/components/chai/chai.js"></script>
   <script>mocha.setup('bdd')</script>
