--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Github Usage</h1>
-    <div class="row">
+    <div class="row form-wrapper">
         <div class="col-sm-6">
             <form role="form" action="#" id="form">
                 <div class="form-group">
@@ -11,6 +11,12 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
+        </div>
+    </div>
+
+    <div class="row message">
+        <div class="col-md-6">
+            <div class="alert alert-info" role="alert">Weird—couldn't seem to find a user by that name. Please try another name.</div>
         </div>
     </div>
 
@@ -29,6 +35,7 @@
             <svg id="commitsByRepoChart" class="canvas"></svg>
         </div>
     </div>
+
 {% endblock %}
 
 
